# cloudrun-cloudsql-template

./: .pre-commit-config.yaml
app/: .env  Dockerfile  Makefile  README.md  compose-db.yaml  pyproject.toml  requirements.txt
app/cloud_run_cloud_sql_template/: main.py
app/cloud_run_cloud_sql_template/model/: response.py
terraform/: .terraform.lock.hcl  README.md  cloudrun.tf  cloudsql.tf  gar.tf  providers.tf  variables.tf  versions.tf
